// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Group Violation Results Processor should process test results as expected 1`] = `
Object {
  "numFailedTestSuites": 1,
  "numFailedTests": 6,
  "numPassedTestSuites": 0,
  "numPassedTests": 0,
  "numPendingTestSuites": 0,
  "numPendingTests": 0,
  "numRuntimeErrorTestSuites": 0,
  "numTodoTests": 0,
  "numTotalTestSuites": 0,
  "numTotalTests": 7,
  "openHandles": Array [],
  "snapshot": Object {
    "added": 0,
    "didUpdate": false,
    "failure": false,
    "filesAdded": 0,
    "filesRemoved": 0,
    "filesRemovedList": Array [],
    "filesUnmatched": 0,
    "filesUpdated": 0,
    "matched": 0,
    "total": 0,
    "unchecked": 0,
    "uncheckedKeysByFile": Array [],
    "unmatched": 0,
    "updated": 0,
  },
  "startTime": 0,
  "success": true,
  "testResults": Array [
    Object {
      "leaks": false,
      "numFailingTests": 6,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "document-title",
                  "key": "document-title--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                  "wcag": "SA11Y-WCAG-SC2.4.2-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "2.4.2",
                    "violation": Object {
                      "description": "Ensures each HTML document contains a non-empty <title> element",
                      "help": "Documents must have <title> element to aid in navigation",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title?application=axeAPI",
                      "id": "document-title",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": null,
                              "id": "doc-has-title",
                              "impact": "serious",
                              "message": "Document does not have a non-empty <title> element",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                          "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.text-alternatives",
                        "wcag2a",
                        "wcag242",
                        "TTv5",
                        "TT12.a",
                        "EN-301-549",
                        "EN-9.2.4.2",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "SA11Y-WCAG-SC3.1.1-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "3.1.1",
                    "violation": Object {
                      "description": "Ensures every HTML document has a lang attribute",
                      "help": "<html> element must have a lang attribute",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                      "id": "html-has-lang",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": Object {
                                "messageKey": "noLang",
                              },
                              "id": "has-lang",
                              "impact": "serious",
                              "message": "The <html> element does not have a lang attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                          "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.language",
                        "wcag2a",
                        "wcag311",
                        "TTv5",
                        "TT11.a",
                        "EN-301-549",
                        "EN-9.3.1.1",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
                Object {
                  "description": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name",
                  "html": "<a href=\\"#\\"></a>",
                  "id": "link-name",
                  "key": "link-name--a",
                  "selectors": "a",
                  "summary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                  "wcag": "SA11Y-WCAG-SC4.1.2-P1",
                  "wcagData": Object {
                    "priority": "P1",
                    "successCriteria": "4.1.2",
                    "violation": Object {
                      "description": "Ensures links have discernible text",
                      "help": "Links must have discernible text",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name?application=axeAPI",
                      "id": "link-name",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": null,
                              "id": "has-visible-text",
                              "impact": "serious",
                              "message": "Element does not have text that is visible to screen readers",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": null,
                              "id": "aria-label",
                              "impact": "serious",
                              "message": "aria-label attribute does not exist or is empty",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": null,
                              "id": "aria-labelledby",
                              "impact": "serious",
                              "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": Object {
                                "messageKey": "noAttr",
                              },
                              "id": "non-empty-title",
                              "impact": "serious",
                              "message": "Element has no title attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                          "html": "<a href=\\"#\\"></a>",
                          "impact": "serious",
                          "none": Array [
                            Object {
                              "data": null,
                              "id": "focusable-no-name",
                              "impact": "serious",
                              "message": "Element is in tab order and does not have accessible text",
                              "relatedNodes": Array [],
                            },
                          ],
                          "target": Array [
                            "a",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.name-role-value",
                        "wcag2a",
                        "wcag244",
                        "wcag412",
                        "section508",
                        "section508.22.a",
                        "TTv5",
                        "TT6.a",
                        "EN-301-549",
                        "EN-9.2.4.4",
                        "EN-9.4.1.2",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures each HTML document contains a non-empty <title> element",
                  "help": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title?application=axeAPI",
                  "id": "document-title",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "doc-has-title",
                          "impact": "serious",
                          "message": "Document does not have a non-empty <title> element",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.text-alternatives",
                    "wcag2a",
                    "wcag242",
                    "TTv5",
                    "TT12.a",
                    "EN-301-549",
                    "EN-9.2.4.2",
                    "ACT",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                    "TTv5",
                    "TT11.a",
                    "EN-301-549",
                    "EN-9.3.1.1",
                    "ACT",
                  ],
                },
                Object {
                  "description": "Ensures links have discernible text",
                  "help": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name?application=axeAPI",
                  "id": "link-name",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "has-visible-text",
                          "impact": "serious",
                          "message": "Element does not have text that is visible to screen readers",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-label",
                          "impact": "serious",
                          "message": "aria-label attribute does not exist or is empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-labelledby",
                          "impact": "serious",
                          "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": Object {
                            "messageKey": "noAttr",
                          },
                          "id": "non-empty-title",
                          "impact": "serious",
                          "message": "Element has no title attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                      "html": "<a href=\\"#\\"></a>",
                      "impact": "serious",
                      "none": Array [
                        Object {
                          "data": null,
                          "id": "focusable-no-name",
                          "impact": "serious",
                          "message": "Element is in tab order and does not have accessible text",
                          "relatedNodes": Array [],
                        },
                      ],
                      "target": Array [
                        "a",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.name-role-value",
                    "wcag2a",
                    "wcag244",
                    "wcag412",
                    "section508",
                    "section508.22.a",
                    "TTv5",
                    "TT6.a",
                    "EN-301-549",
                    "EN-9.2.4.4",
                    "EN-9.4.1.2",
                    "ACT",
                  ],
                },
              ],
            },
          ],
          "failureMessages": Array [
            "
            The test has failed the accessibility check. Accessibility Stacktrace/Issues:
            3 HTML elements have accessibility issue(s). 3 rules failed.

            (1) [document-title] Documents must have <title> element to aid in navigation
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title
            * WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
            * More info: Fix any of the following:
  Document does not have a non-empty <title> element
            * Error element(s) : 1
            - (1) HTML element : <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : document-title--html
(2) [html-has-lang] <html> element must have a lang attribute
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/html-has-lang
            * WCAG Criteria: SA11Y-WCAG-SC3.1.1-P2
            * More info: Fix any of the following:
  The <html> element does not have a lang attribute
            * Error element(s) : 1
            - (1) HTML element : <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : html-has-lang--html
(3) [link-name] Links must have discernible text
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name
            * WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
            * More info: Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
            * Error element(s) : 1
            - (1) HTML element : <a href=\\"#\\"></a>
             - CSS selector(s) : a
             - HTML Tag Hierarchy : link-name--a
            For more info about automated accessibility testing: https://sfdc.co/a11y-test
            For tips on fixing accessibility bugs: https://sfdc.co/a11y
            For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
            For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
            ",
          ],
          "fullName": "A11yError-0",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang",
                  "html": "<html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "SA11Y-WCAG-SC3.1.1-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "3.1.1",
                    "violation": Object {
                      "description": "Ensures every HTML document has a lang attribute",
                      "help": "<html> element must have a lang attribute",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                      "id": "html-has-lang",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": Object {
                                "messageKey": "noLang",
                              },
                              "id": "has-lang",
                              "impact": "serious",
                              "message": "The <html> element does not have a lang attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                          "html": "<html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.language",
                        "wcag2a",
                        "wcag311",
                        "TTv5",
                        "TT11.a",
                        "EN-301-549",
                        "EN-9.3.1.1",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                    "TTv5",
                    "TT11.a",
                    "EN-301-549",
                    "EN-9.3.1.1",
                    "ACT",
                  ],
                },
              ],
            },
          ],
          "failureMessages": Array [
            "
            The test has failed the accessibility check. Accessibility Stacktrace/Issues:
            1 HTML elements have accessibility issue(s). 1 rules failed.

            (1) [html-has-lang] <html> element must have a lang attribute
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/html-has-lang
            * WCAG Criteria: SA11Y-WCAG-SC3.1.1-P2
            * More info: Fix any of the following:
  The <html> element does not have a lang attribute
            * Error element(s) : 1
            - (1) HTML element : <html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : html-has-lang--html
            For more info about automated accessibility testing: https://sfdc.co/a11y-test
            For tips on fixing accessibility bugs: https://sfdc.co/a11y
            For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
            For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
            ",
          ],
          "fullName": "A11yError-1",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "document-title",
                  "key": "document-title--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                  "wcag": "SA11Y-WCAG-SC2.4.2-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "2.4.2",
                    "violation": Object {
                      "description": "Ensures each HTML document contains a non-empty <title> element",
                      "help": "Documents must have <title> element to aid in navigation",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title?application=axeAPI",
                      "id": "document-title",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": null,
                              "id": "doc-has-title",
                              "impact": "serious",
                              "message": "Document does not have a non-empty <title> element",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                          "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.text-alternatives",
                        "wcag2a",
                        "wcag242",
                        "TTv5",
                        "TT12.a",
                        "EN-301-549",
                        "EN-9.2.4.2",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "SA11Y-WCAG-SC3.1.1-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "3.1.1",
                    "violation": Object {
                      "description": "Ensures every HTML document has a lang attribute",
                      "help": "<html> element must have a lang attribute",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                      "id": "html-has-lang",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": Object {
                                "messageKey": "noLang",
                              },
                              "id": "has-lang",
                              "impact": "serious",
                              "message": "The <html> element does not have a lang attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                          "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.language",
                        "wcag2a",
                        "wcag311",
                        "TTv5",
                        "TT11.a",
                        "EN-301-549",
                        "EN-9.3.1.1",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
                Object {
                  "description": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name",
                  "html": "<a href=\\"#\\"></a>",
                  "id": "link-name",
                  "key": "link-name--a",
                  "selectors": "a",
                  "summary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                  "wcag": "SA11Y-WCAG-SC4.1.2-P1",
                  "wcagData": Object {
                    "priority": "P1",
                    "successCriteria": "4.1.2",
                    "violation": Object {
                      "description": "Ensures links have discernible text",
                      "help": "Links must have discernible text",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name?application=axeAPI",
                      "id": "link-name",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": null,
                              "id": "has-visible-text",
                              "impact": "serious",
                              "message": "Element does not have text that is visible to screen readers",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": null,
                              "id": "aria-label",
                              "impact": "serious",
                              "message": "aria-label attribute does not exist or is empty",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": null,
                              "id": "aria-labelledby",
                              "impact": "serious",
                              "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": Object {
                                "messageKey": "noAttr",
                              },
                              "id": "non-empty-title",
                              "impact": "serious",
                              "message": "Element has no title attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                          "html": "<a href=\\"#\\"></a>",
                          "impact": "serious",
                          "none": Array [
                            Object {
                              "data": null,
                              "id": "focusable-no-name",
                              "impact": "serious",
                              "message": "Element is in tab order and does not have accessible text",
                              "relatedNodes": Array [],
                            },
                          ],
                          "target": Array [
                            "a",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.name-role-value",
                        "wcag2a",
                        "wcag244",
                        "wcag412",
                        "section508",
                        "section508.22.a",
                        "TTv5",
                        "TT6.a",
                        "EN-301-549",
                        "EN-9.2.4.4",
                        "EN-9.4.1.2",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures each HTML document contains a non-empty <title> element",
                  "help": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title?application=axeAPI",
                  "id": "document-title",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "doc-has-title",
                          "impact": "serious",
                          "message": "Document does not have a non-empty <title> element",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.text-alternatives",
                    "wcag2a",
                    "wcag242",
                    "TTv5",
                    "TT12.a",
                    "EN-301-549",
                    "EN-9.2.4.2",
                    "ACT",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                    "TTv5",
                    "TT11.a",
                    "EN-301-549",
                    "EN-9.3.1.1",
                    "ACT",
                  ],
                },
                Object {
                  "description": "Ensures links have discernible text",
                  "help": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name?application=axeAPI",
                  "id": "link-name",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "has-visible-text",
                          "impact": "serious",
                          "message": "Element does not have text that is visible to screen readers",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-label",
                          "impact": "serious",
                          "message": "aria-label attribute does not exist or is empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-labelledby",
                          "impact": "serious",
                          "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": Object {
                            "messageKey": "noAttr",
                          },
                          "id": "non-empty-title",
                          "impact": "serious",
                          "message": "Element has no title attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                      "html": "<a href=\\"#\\"></a>",
                      "impact": "serious",
                      "none": Array [
                        Object {
                          "data": null,
                          "id": "focusable-no-name",
                          "impact": "serious",
                          "message": "Element is in tab order and does not have accessible text",
                          "relatedNodes": Array [],
                        },
                      ],
                      "target": Array [
                        "a",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.name-role-value",
                    "wcag2a",
                    "wcag244",
                    "wcag412",
                    "section508",
                    "section508.22.a",
                    "TTv5",
                    "TT6.a",
                    "EN-301-549",
                    "EN-9.2.4.4",
                    "EN-9.4.1.2",
                    "ACT",
                  ],
                },
              ],
            },
          ],
          "failureMessages": Array [
            "
            The test has failed the accessibility check. Accessibility Stacktrace/Issues:
            3 HTML elements have accessibility issue(s). 3 rules failed.

            (1) [document-title] Documents must have <title> element to aid in navigation
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title
            * WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
            * More info: Fix any of the following:
  Document does not have a non-empty <title> element
            * Error element(s) : 1
            - (1) HTML element : <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : document-title--html
(2) [html-has-lang] <html> element must have a lang attribute
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/html-has-lang
            * WCAG Criteria: SA11Y-WCAG-SC3.1.1-P2
            * More info: Fix any of the following:
  The <html> element does not have a lang attribute
            * Error element(s) : 1
            - (1) HTML element : <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : html-has-lang--html
(3) [link-name] Links must have discernible text
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name
            * WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
            * More info: Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
            * Error element(s) : 1
            - (1) HTML element : <a href=\\"#\\"></a>
             - CSS selector(s) : a
             - HTML Tag Hierarchy : link-name--a
            For more info about automated accessibility testing: https://sfdc.co/a11y-test
            For tips on fixing accessibility bugs: https://sfdc.co/a11y
            For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
            For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
            ",
          ],
          "fullName": "A11yError-2",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang",
                  "html": "<html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "SA11Y-WCAG-SC3.1.1-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "3.1.1",
                    "violation": Object {
                      "description": "Ensures every HTML document has a lang attribute",
                      "help": "<html> element must have a lang attribute",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                      "id": "html-has-lang",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": Object {
                                "messageKey": "noLang",
                              },
                              "id": "has-lang",
                              "impact": "serious",
                              "message": "The <html> element does not have a lang attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                          "html": "<html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.language",
                        "wcag2a",
                        "wcag311",
                        "TTv5",
                        "TT11.a",
                        "EN-301-549",
                        "EN-9.3.1.1",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                    "TTv5",
                    "TT11.a",
                    "EN-301-549",
                    "EN-9.3.1.1",
                    "ACT",
                  ],
                },
              ],
            },
          ],
          "failureMessages": Array [
            "
            The test has failed the accessibility check. Accessibility Stacktrace/Issues:
            1 HTML elements have accessibility issue(s). 1 rules failed.

            (1) [html-has-lang] <html> element must have a lang attribute
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/html-has-lang
            * WCAG Criteria: SA11Y-WCAG-SC3.1.1-P2
            * More info: Fix any of the following:
  The <html> element does not have a lang attribute
            * Error element(s) : 1
            - (1) HTML element : <html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : html-has-lang--html
            For more info about automated accessibility testing: https://sfdc.co/a11y-test
            For tips on fixing accessibility bugs: https://sfdc.co/a11y
            For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
            For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
            ",
          ],
          "fullName": "A11yError-3",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "document-title",
                  "key": "document-title--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                  "wcag": "SA11Y-WCAG-SC2.4.2-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "2.4.2",
                    "violation": Object {
                      "description": "Ensures each HTML document contains a non-empty <title> element",
                      "help": "Documents must have <title> element to aid in navigation",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title?application=axeAPI",
                      "id": "document-title",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": null,
                              "id": "doc-has-title",
                              "impact": "serious",
                              "message": "Document does not have a non-empty <title> element",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                          "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.text-alternatives",
                        "wcag2a",
                        "wcag242",
                        "TTv5",
                        "TT12.a",
                        "EN-301-549",
                        "EN-9.2.4.2",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "SA11Y-WCAG-SC3.1.1-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "3.1.1",
                    "violation": Object {
                      "description": "Ensures every HTML document has a lang attribute",
                      "help": "<html> element must have a lang attribute",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                      "id": "html-has-lang",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": Object {
                                "messageKey": "noLang",
                              },
                              "id": "has-lang",
                              "impact": "serious",
                              "message": "The <html> element does not have a lang attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                          "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.language",
                        "wcag2a",
                        "wcag311",
                        "TTv5",
                        "TT11.a",
                        "EN-301-549",
                        "EN-9.3.1.1",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
                Object {
                  "description": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name",
                  "html": "<a href=\\"#\\"></a>",
                  "id": "link-name",
                  "key": "link-name--a",
                  "selectors": "a",
                  "summary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                  "wcag": "SA11Y-WCAG-SC4.1.2-P1",
                  "wcagData": Object {
                    "priority": "P1",
                    "successCriteria": "4.1.2",
                    "violation": Object {
                      "description": "Ensures links have discernible text",
                      "help": "Links must have discernible text",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name?application=axeAPI",
                      "id": "link-name",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": null,
                              "id": "has-visible-text",
                              "impact": "serious",
                              "message": "Element does not have text that is visible to screen readers",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": null,
                              "id": "aria-label",
                              "impact": "serious",
                              "message": "aria-label attribute does not exist or is empty",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": null,
                              "id": "aria-labelledby",
                              "impact": "serious",
                              "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                              "relatedNodes": Array [],
                            },
                            Object {
                              "data": Object {
                                "messageKey": "noAttr",
                              },
                              "id": "non-empty-title",
                              "impact": "serious",
                              "message": "Element has no title attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                          "html": "<a href=\\"#\\"></a>",
                          "impact": "serious",
                          "none": Array [
                            Object {
                              "data": null,
                              "id": "focusable-no-name",
                              "impact": "serious",
                              "message": "Element is in tab order and does not have accessible text",
                              "relatedNodes": Array [],
                            },
                          ],
                          "target": Array [
                            "a",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.name-role-value",
                        "wcag2a",
                        "wcag244",
                        "wcag412",
                        "section508",
                        "section508.22.a",
                        "TTv5",
                        "TT6.a",
                        "EN-301-549",
                        "EN-9.2.4.4",
                        "EN-9.4.1.2",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang",
                  "html": "<html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "SA11Y-WCAG-SC3.1.1-P2",
                  "wcagData": Object {
                    "priority": "P2",
                    "successCriteria": "3.1.1",
                    "violation": Object {
                      "description": "Ensures every HTML document has a lang attribute",
                      "help": "<html> element must have a lang attribute",
                      "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                      "id": "html-has-lang",
                      "impact": "serious",
                      "nodes": Array [
                        Object {
                          "all": Array [],
                          "any": Array [
                            Object {
                              "data": Object {
                                "messageKey": "noLang",
                              },
                              "id": "has-lang",
                              "impact": "serious",
                              "message": "The <html> element does not have a lang attribute",
                              "relatedNodes": Array [],
                            },
                          ],
                          "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                          "html": "<html>",
                          "impact": "serious",
                          "none": Array [],
                          "target": Array [
                            "html",
                          ],
                        },
                      ],
                      "tags": Array [
                        "cat.language",
                        "wcag2a",
                        "wcag311",
                        "TTv5",
                        "TT11.a",
                        "EN-301-549",
                        "EN-9.3.1.1",
                        "ACT",
                      ],
                    },
                    "wcagLevel": "A",
                    "wcagVersion": "2.1",
                  },
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures each HTML document contains a non-empty <title> element",
                  "help": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/document-title?application=axeAPI",
                  "id": "document-title",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "doc-has-title",
                          "impact": "serious",
                          "message": "Document does not have a non-empty <title> element",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.text-alternatives",
                    "wcag2a",
                    "wcag242",
                    "TTv5",
                    "TT12.a",
                    "EN-301-549",
                    "EN-9.2.4.2",
                    "ACT",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                    "TTv5",
                    "TT11.a",
                    "EN-301-549",
                    "EN-9.3.1.1",
                    "ACT",
                  ],
                },
                Object {
                  "description": "Ensures links have discernible text",
                  "help": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/link-name?application=axeAPI",
                  "id": "link-name",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "has-visible-text",
                          "impact": "serious",
                          "message": "Element does not have text that is visible to screen readers",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-label",
                          "impact": "serious",
                          "message": "aria-label attribute does not exist or is empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-labelledby",
                          "impact": "serious",
                          "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": Object {
                            "messageKey": "noAttr",
                          },
                          "id": "non-empty-title",
                          "impact": "serious",
                          "message": "Element has no title attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                      "html": "<a href=\\"#\\"></a>",
                      "impact": "serious",
                      "none": Array [
                        Object {
                          "data": null,
                          "id": "focusable-no-name",
                          "impact": "serious",
                          "message": "Element is in tab order and does not have accessible text",
                          "relatedNodes": Array [],
                        },
                      ],
                      "target": Array [
                        "a",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.name-role-value",
                    "wcag2a",
                    "wcag244",
                    "wcag412",
                    "section508",
                    "section508.22.a",
                    "TTv5",
                    "TT6.a",
                    "EN-301-549",
                    "EN-9.2.4.4",
                    "EN-9.4.1.2",
                    "ACT",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.8/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                    "TTv5",
                    "TT11.a",
                    "EN-301-549",
                    "EN-9.3.1.1",
                    "ACT",
                  ],
                },
              ],
            },
          ],
          "failureMessages": Array [
            "
            The test has failed the accessibility check. Accessibility Stacktrace/Issues:
            4 HTML elements have accessibility issue(s). 3 rules failed.

            (1) [document-title] Documents must have <title> element to aid in navigation
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title
            * WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2
            * More info: Fix any of the following:
  Document does not have a non-empty <title> element
            * Error element(s) : 1
            - (1) HTML element : <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : document-title--html
(2) [html-has-lang] <html> element must have a lang attribute
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/html-has-lang
            * WCAG Criteria: SA11Y-WCAG-SC3.1.1-P2
            * More info: Fix any of the following:
  The <html> element does not have a lang attribute
            * Error element(s) : 2
            - (1) HTML element : <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : html-has-lang--html
- (2) HTML element : <html>
             - CSS selector(s) : html
             - HTML Tag Hierarchy : html-has-lang--html
(3) [link-name] Links must have discernible text
            * Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name
            * WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1
            * More info: Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
            * Error element(s) : 1
            - (1) HTML element : <a href=\\"#\\"></a>
             - CSS selector(s) : a
             - HTML Tag Hierarchy : link-name--a
            For more info about automated accessibility testing: https://sfdc.co/a11y-test
            For tips on fixing accessibility bugs: https://sfdc.co/a11y
            For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
            For guidance on accessibility related specifics, contact our A11y team: http://sfdc.co/tmp-a11y
            ",
          ],
          "fullName": "A11yError-4",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [],
          "fullName": "Error-5",
          "status": "passed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "name": "AxeError",
            },
          ],
          "failureMessages": Array [
            "
            The test has failed to execute accessibility check. Accessibility Stacktrace/Issues:
            undefined
            For more info about the axe Error: http://sfdc.co/axeIssues
            For more info about automated accessibility testing: https://sfdc.co/a11y-test
            For technical questions regarding Salesforce accessibility tools, contact our Sa11y team: http://sfdc.co/sa11y-users
            ",
          ],
          "fullName": "AxeError-6",
          "status": "failed",
        },
      ],
    },
  ],
  "wasInterrupted": false,
}
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 2`] = `2`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 3`] = `
"2 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 1`] = `""`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 2`] = `0`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 3`] = `
"0 Accessibility issues found
 "
`;

exports[`a11y Results Formatter should format using specified options: 0 1`] = `"[{\\"id\\":\\"document-title\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"cat.text-alternatives\\",\\"wcag2a\\",\\"wcag242\\",\\"TTv5\\",\\"TT12.a\\",\\"EN-301-549\\",\\"EN-9.2.4.2\\",\\"ACT\\"],\\"description\\":\\"Ensures each HTML document contains a non-empty <title> element\\",\\"help\\":\\"Documents must have <title> element to aid in navigation\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.8/document-title?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"doc-has-title\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Document does not have a non-empty <title> element\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"serious\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head><style>* { pointer-events: all }</style></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  Document does not have a non-empty <title> element\\"}]},{\\"id\\":\\"link-name\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"cat.name-role-value\\",\\"wcag2a\\",\\"wcag244\\",\\"wcag412\\",\\"section508\\",\\"section508.22.a\\",\\"TTv5\\",\\"TT6.a\\",\\"EN-301-549\\",\\"EN-9.2.4.4\\",\\"EN-9.4.1.2\\",\\"ACT\\"],\\"description\\":\\"Ensures links have discernible text\\",\\"help\\":\\"Links must have discernible text\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.8/link-name?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"has-visible-text\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element does not have text that is visible to screen readers\\"},{\\"id\\":\\"aria-label\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-label attribute does not exist or is empty\\"},{\\"id\\":\\"aria-labelledby\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\"},{\\"id\\":\\"non-empty-title\\",\\"data\\":{\\"messageKey\\":\\"noAttr\\"},\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element has no title attribute\\"}],\\"all\\":[],\\"none\\":[{\\"id\\":\\"focusable-no-name\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element is in tab order and does not have accessible text\\"}],\\"impact\\":\\"serious\\",\\"html\\":\\"<a href=\\\\\\"#\\\\\\"></a>\\",\\"target\\":[\\"a\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Element is in tab order and does not have accessible text\\\\n\\\\nFix any of the following:\\\\n  Element does not have text that is visible to screen readers\\\\n  aria-label attribute does not exist or is empty\\\\n  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\\\n  Element has no title attribute\\"}]}]"`;

exports[`a11y Results Formatter should format using specified options: 1 1`] = `
"\\"* (document-title) Documents must have <title> element to aid in navigation: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

\\"* (link-name) Links must have discernible text: a\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should format using specified options: 2 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should format using specified options: 3 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should format using specified options: 4 1`] = `
"* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 1`] = `
"2 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 2`] = `
"2 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;

exports[`a11y Results Formatter should throw error when violations are present 1`] = `
"2 Accessibility issues found
 * (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/document-title 
	- WCAG Criteria: SA11Y-WCAG-SC2.4.2-P2

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.8/link-name 
	- WCAG Criteria: SA11Y-WCAG-SC4.1.2-P1"
`;
